kubernetes/ingress/ingress-endpoints-nosql.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress-endpoints-nosql
  namespace: nosql
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - http:
        paths:
          # Angular app
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: angular-app-service
                port:
                  number: 80

          # APIs
          - path: /message
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
