kubernetes/ingress/ingress-endpoints.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress-endpoints
  namespace: nosql
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - http:
        paths:
          # APIs - sem rewrite
          - path: /message
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080

          # Assets da Angular App
          - path: /assets/
            pathType: Prefix
            backend:
              service:
                name: angular-app-service
                port:
                  number: 80

          # RabbitMQ
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672

          # Grafana
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80

          # Angular
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: angular-app-service
                port:
                  number: 80
